--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.2",
+    "@storybook/nextjs": "^10.0.8",
     "@types/lodash.isempty": "^4.4.9",
     "lodash.isempty": "^4.4.0",
     "next": "16.0.0",
@@ -29,16 +30,16 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser-playwright": "^4.0.10",
+    "@vitest/coverage-v8": "^4.0.10",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "eslint-plugin-storybook": "^10.0.8",
+    "playwright": "^1.56.1",
     "storybook": "^10.0.8",
+    "storybook-addon-pseudo-states": "^10.0.8",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "@storybook/nextjs-vite": "^10.0.8",
-    "vitest": "^4.0.10",
-    "playwright": "^1.56.1",
-    "@vitest/browser-playwright": "^4.0.10",
-    "@vitest/coverage-v8": "^4.0.10"
+    "vitest": "^4.0.10"
   }
 }
