--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@reduxjs/toolkit": "^2.9.2",
     "@storybook/nextjs": "^10.0.8",
     "@types/lodash.isempty": "^4.4.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lodash.isempty": "^4.4.0",
+    "lucide-react": "^0.554.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-redux": "^9.2.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
@@ -39,6 +44,7 @@
     "storybook": "^10.0.8",
     "storybook-addon-pseudo-states": "^10.0.8",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vitest": "^4.0.10"
   }
